--- a/BabyMiam.vcxproj.filters
+++ b/BabyMiam.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="MainSDLWindow.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MainSDLWindow.hpp">
+      <Filter>Fichiers sources</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
