--- a/BabyMiam.vcxproj
+++ b/BabyMiam.vcxproj
@@ -137,10 +137,12 @@
     <ClCompile Include="Intake.cpp" />
     <ClCompile Include="MainSDLWindow.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="text.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bottle.h" />
     <ClInclude Include="click.h" />
+    <ClInclude Include="text.h" />
     <ClInclude Include="Intake.h" />
     <ClInclude Include="MainSDLWindow.hpp" />
   </ItemGroup>
