--- a/BabyMiam.vcxproj.filters
+++ b/BabyMiam.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Intake.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="text.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainSDLWindow.hpp">
@@ -42,6 +45,9 @@
       <Filter>Fichiers sources</Filter>
     </ClInclude>
     <ClInclude Include="Intake.h">
+      <Filter>Fichiers sources</Filter>
+    </ClInclude>
+    <ClInclude Include="text.h">
       <Filter>Fichiers sources</Filter>
     </ClInclude>
   </ItemGroup>
