--- a/BabyMiam.vcxproj.filters
+++ b/BabyMiam.vcxproj.filters
@@ -33,6 +33,12 @@
     <ClCompile Include="text.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="Shopping.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="Menu.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainSDLWindow.hpp">
@@ -48,6 +54,12 @@
       <Filter>Fichiers sources</Filter>
     </ClInclude>
     <ClInclude Include="text.h">
+      <Filter>Fichiers sources</Filter>
+    </ClInclude>
+    <ClInclude Include="Shopping.h">
+      <Filter>Fichiers sources</Filter>
+    </ClInclude>
+    <ClInclude Include="Menu.h">
       <Filter>Fichiers sources</Filter>
     </ClInclude>
   </ItemGroup>
